--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <title>New title from Alice</title>
 </head>
 <body>
-    <h1>Hellow, World</h1>
+    <h1>Hello, World</h1>
+
+    <section class="section">
+        <h2>Become an Awesomeness Ambassador</h2>
+        <p>We are in need of enthusiastic people who would spread the awesomeness around the globe. We strive to create a local community of awesome people in every country in the world.</p>
+    </section>
 
 </body>
 </html>
