--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
         <img src="/img/fitness.jpg" alt="A happy employee">
     </section>
 
+
+    <footer>
+        <h5>Awesomeness Inc.</h5>
+        <small>A quality that inspires awe.</small>
+    </footer>
+    
 </body>
 </html>
