--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <footer>
         <h5>Awesomeness Inc.</h5>
         <small>A quality that inspires awe.</small>
+        <small>© 2018 Copyright: Awesomeness Inc.</small>
     </footer>
-    
+
 </body>
 </html>
